--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,8 @@
 	    	"src/helpers.php"
 	    ]
     },
+    "require": {
+        "vkovic/laravel-commando": "^0.1"
+    },
     "minimum-stability": "dev"
 }
